--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -1,6 +1,7 @@
 .n-wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 10vh;
 }
 
@@ -18,7 +19,6 @@
 
 .n-right {
   display: flex;
-  flex: 1;
   align-items: center;
   justify-content: center;
   font-weight: 400;
