--- a/src/App.css
+++ b/src/App.css
@@ -12,18 +12,24 @@
   --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  padding: 0.5rem 3.5rem;
+  padding: 0.5rem 5rem;
   overflow: hidden;
   color: var(--black);
   font-family: 'Open Sans', sans-serif;
 }
 
-.btn{
+.btn {
   border-radius: 34px;
   border: none;
   color: white;
@@ -33,7 +39,7 @@ html{
   box-shadow: 0px 20px 24px 3px rgba(251, 161, 40, 0.42);
 }
 
-.btn:hover{
+.btn:hover {
   background: white;
   cursor: pointer;
   color: var(--orange);
