--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 
 html {
   scroll-behavior: smooth;
+  color: var(--black);
 }
 
 * {
@@ -22,7 +23,7 @@ html {
   box-sizing: border-box;
 }
 
-.App {
+.container{
   padding: 0.5rem 5rem;
   overflow: hidden;
   color: var(--black);
