--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -2,8 +2,7 @@
   display: flex;
   height: 100vh;
   gap: 10rem;
-  margin-top: 6rem;
-  padding: 2rem 0 0 0;
+  padding-top: 2rem;
 }
 
 .a-avatar img {
@@ -25,7 +24,7 @@
   color: var(--orange);
 }
 
-.a-right>:nth-child(2) {
+.a-right .text {
   font-size: 1.125rem;
   text-align: justify;
 }
