--- a/src/components/Projects/styles.css
+++ b/src/components/Projects/styles.css
@@ -17,11 +17,30 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: 1fr;
   gap: 1rem;
-  text-align: center;
 }
 
 .p-card {
   width: 350px;
-  height: 188px;
-  background: var(--orangeCard);
+  height: 300px;
+  padding: 30px 26px;
+  background: #EBEBEB;
+  border-radius: 10px;
+  position: relative;
+}
+
+.p-card>:nth-child(1) {
+  font-size: 18px;
+  margin-bottom: 25px;
+  font-weight: bold;
+}
+
+.p-card>:nth-child(2) {
+  font-size: 14px;
+  text-align: justify;
+}
+
+.p-card>:nth-child(3) {
+  display: inline-block;
+  position: absolute;
+  bottom: 20px;
 }
