--- a/src/components/Contact/styles.css
+++ b/src/components/Contact/styles.css
@@ -27,7 +27,10 @@
   color: var(--orange);
   font-size: 40px;
 
-  transition: background 0.3s;
+  -webkit-transition: 0.5s ease-in;
+  -moz-transition: 0.5s ease-in;
+  -o-transition: 0.5s ease-in;
+  transition: 0.3s ease-in;
 }
 
 .social:hover {
