--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ html {
   box-sizing: border-box;
 }
 
-.container{
+.container {
   padding: 0.5rem 5rem;
   overflow: hidden;
   color: var(--black);
@@ -38,6 +38,7 @@ html {
   padding: 11px 26px;
   background: linear-gradient(180deg, #fdc50f 26.71%, #fb982f 99.36%);
   box-shadow: 0px 20px 24px 3px rgba(251, 161, 40, 0.42);
+  transition: all 0.5s ease-in;
 }
 
 .btn:hover {
