--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -48,10 +48,32 @@ a {
   gap: 1rem;
 }
 
-/*@media (max-width: 390px) {
+/*Mobile*/
+@media (max-width: 767px) {
+  .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+  }
+
   .a-avatar img {
     width: 140px;
     height: 140px;
     border-radius: 50%;
   }
-}*/
+
+  .a-right>:nth-child(1) {
+    font-size: 2.25rem;
+  }
+
+  .social-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 4rem;
+  }
+
+
+}
