--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -51,6 +51,7 @@ a {
 /*Mobile*/
 @media (max-width: 767px) {
   .about {
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,11 +59,17 @@ a {
     gap: 1rem;
   }
 
+  .container {
+    padding: 0;
+  }
+
   .a-avatar img {
     width: 140px;
     height: 140px;
     border-radius: 50%;
   }
+
+
 
   .a-right>:nth-child(1) {
     font-size: 2.25rem;
