--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -78,7 +78,7 @@ a {
   .social-btn {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     margin-top: 4rem;
   }
 
