--- a/src/components/Projects/styles.css
+++ b/src/components/Projects/styles.css
@@ -3,6 +3,8 @@
   align-items: center;
   flex-direction: column;
   margin-bottom: 10rem;
+
+  padding-bottom: 2rem;
 }
 
 .p-container>:nth-child(1) {
