--- a/src/components/Projects/styles.css
+++ b/src/components/Projects/styles.css
@@ -1,6 +1,7 @@
 .p-container {
   display: flex;
   align-items: center;
+  justify-items: center;
   flex-direction: column;
   margin-bottom: 10rem;
 
@@ -70,4 +71,15 @@
   .p-card>:nth-child(3) button {
     right: 70px;
   }
+}
+
+@media (min-width: 768px) and (max-width: 1100px) {
+
+  .p-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 1fr;
+    gap: 2rem;
+  }
+
 }
