--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -5,6 +5,13 @@
   padding-top: 2rem;
 }
 
+.a-dark{
+  background: black;
+}
+
+.a-light{
+  background: white;
+}
 .a-avatar img {
   width: 20rem;
   height: 20rem;
@@ -67,6 +74,7 @@ a {
     width: 140px;
     height: 140px;
     border-radius: 50%;
+    margin-top: 2rem;
   }
 
   .a-right>:nth-child(1) {
