--- a/src/components/Intro/styles.css
+++ b/src/components/Intro/styles.css
@@ -1,8 +1,15 @@
 .intro {
   display: flex;
   height: 100vh;
-  margin-top: 6rem;
   align-items: center;
+}
+
+.i-dark{
+  background: black;
+}
+
+.i-light{
+  background: white;
 }
 
 .i-left {
@@ -73,7 +80,6 @@
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
-    margin-top: -5rem;
 
     gap: 0rem;
     text-align: center;
