--- a/src/components/About/styles.css
+++ b/src/components/About/styles.css
@@ -37,18 +37,12 @@
   text-align: justify;
 }
 
-.social-btn {
-  margin-top: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 a {
   text-decoration: none;
 }
 
 .social-btn {
+  margin-top: 1rem;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
@@ -65,7 +59,7 @@ a {
 /*Mobile, tablet*/
 @media (min-width: 320px) and (max-width: 1023px) {
   .about {
-    width: 100vw;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -93,5 +87,6 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
   }
 }
