--- a/src/components/Intro/styles.css
+++ b/src/components/Intro/styles.css
@@ -80,6 +80,7 @@
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
+    height: 100%;
 
     gap: 0rem;
     text-align: center;
@@ -105,6 +106,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2rem;
   }
 
   .i-right img {
